[gd_scene load_steps=13 format=2]

[ext_resource path="res://interface/font70.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/font100.tres" type="DynamicFont" id=2]
[ext_resource path="res://pic/gradient.png" type="Texture" id=3]
[ext_resource path="res://audio/colide.tres" type="AudioStream" id=5]
[ext_resource path="res://audio/go.tres" type="AudioStream" id=6]
[ext_resource path="res://scns/for GAME/Area.tscn" type="PackedScene" id=7]
[ext_resource path="res://scns/for GAME/Desk.tscn" type="PackedScene" id=9]
[ext_resource path="res://scrs/Game.gd" type="Script" id=10]
[ext_resource path="res://interface/font30.tres" type="DynamicFont" id=14]
[ext_resource path="res://scrs/Button.gd" type="Script" id=15]
[ext_resource path="res://scns/for GAME/Support.tscn" type="PackedScene" id=19]
[ext_resource path="res://pic/support.svg" type="Texture" id=35]

[node name="Game" type="Node2D"]
modulate = Color( 0.862745, 0.862745, 0.862745, 1 )
script = ExtResource( 10 )

[node name="Camera & AI script" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true

[node name="support" type="TextureButton" parent="."]
margin_left = -800.0
margin_top = 615.0
margin_right = -400.0
margin_bottom = 781.0
button_mask = 7
expand = true
script = ExtResource( 15 )

[node name="Label" type="Label" parent="support"]
anchor_right = 1.0
margin_right = 400.0
margin_bottom = 298.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "?
справка"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="TextureButton" parent="."]
margin_left = 400.0
margin_top = 615.0
margin_right = 800.0
margin_bottom = 781.0
button_mask = 7
expand = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cancel"]
anchor_right = 1.0
margin_right = 400.0
margin_bottom = 298.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "<
отмена хода"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Support" parent="." instance=ExtResource( 19 )]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 100

[node name="desk" parent="." instance=ExtResource( 9 )]

[node name="useless" type="Node2D" parent="desk"]
position = Vector2( 99999, 99999 )

[node name="green" parent="desk" instance=ExtResource( 7 )]
position = Vector2( 600, 215 )
scale = Vector2( 5, 5 )
z_index = 2

[node name="blue" parent="desk" instance=ExtResource( 7 )]
position = Vector2( -600, 215 )
scale = Vector2( 5, 5 )
z_index = 2

[node name="red" parent="desk" instance=ExtResource( 7 )]
position = Vector2( 0, -814 )
scale = Vector2( 5, 5 )
z_index = 2

[node name="warning_cancel_move" type="Node2D" parent="desk"]
visible = false
z_index = 100

[node name="Label" type="Label" parent="desk/warning_cancel_move"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -788.0
margin_top = -473.0
margin_right = 788.0
margin_bottom = 473.0
custom_fonts/font = ExtResource( 2 )
text = "отменить ход может
только игрок, который
делает этот ход"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="desk/warning_cancel_move/Label"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -610.0
margin_top = -369.0
margin_right = 610.0
margin_bottom = 369.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="TextureButton" parent="desk/warning_cancel_move"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 203.0
margin_right = 200.0
margin_bottom = 355.0
button_mask = 7
expand = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="desk/warning_cancel_move/ok"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -53.0
margin_right = 121.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 1 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
z_index = 10
texture = ExtResource( 35 )

[node name="king" type="Label" parent="end"]
margin_left = -2600.0
margin_top = -600.0
margin_right = -2000.0
margin_bottom = -500.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Убито королей"

[node name="red" type="Label" parent="end/king"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.752941, 0.376471, 0.188235, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="green" type="Label" parent="end/king"]
margin_left = 1200.0
margin_right = 1400.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.188235, 0.752941, 0.376471, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue" type="Label" parent="end/king"]
margin_left = 1600.0
margin_right = 1800.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.376471, 0.188235, 0.752941, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="figure" type="Label" parent="end"]
margin_left = -2600.0
margin_top = -150.0
margin_right = -2000.0
margin_bottom = -50.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Убито фигур"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="Label" parent="end/figure"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.752941, 0.376471, 0.188235, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green" type="Label" parent="end/figure"]
margin_left = 1200.0
margin_right = 1400.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.188235, 0.752941, 0.376471, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue" type="Label" parent="end/figure"]
margin_left = 1600.0
margin_right = 1800.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.376471, 0.188235, 0.752941, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="survive" type="Label" parent="end"]
margin_left = -2600.0
margin_top = 300.0
margin_right = -2000.0
margin_bottom = 400.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Выживание"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="Label" parent="end/survive"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.752941, 0.376471, 0.188235, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green" type="Label" parent="end/survive"]
margin_left = 1200.0
margin_right = 1400.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.188235, 0.752941, 0.376471, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue" type="Label" parent="end/survive"]
margin_left = 1600.0
margin_right = 1800.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.376471, 0.188235, 0.752941, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="TextureButton" parent="end"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4470.0
margin_top = -756.5
margin_right = -4070.0
margin_bottom = -635.5
rect_scale = Vector2( 6, 6 )
button_mask = 7
expand = true
script = ExtResource( 15 )

[node name="Label" type="Label" parent="end/new_game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 121.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "новая игра"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1311.0
margin_top = -800.0
margin_right = 1311.0
margin_bottom = -740.0
custom_fonts/font = ExtResource( 14 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Node" parent="."]

[node name="colide" type="AudioStreamPlayer" parent="music"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="go" type="AudioStreamPlayer" parent="music"]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="update" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="pressed" from="support" to="." method="_on_support_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="desk/warning_cancel_move/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="end/new_game" to="." method="_on_new_game_pressed"]
[connection signal="timeout" from="update" to="." method="_on_update_timeout"]
